terrain metrics projection issues

--- a/Python_Code_Analysis/GEE_RS_Metrics.ipynb
+++ b/Python_Code_Analysis/GEE_RS_Metrics.ipynb
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "id": "3973fae8-f038-4a22-bef5-b9eb97c6acff",
    "metadata": {},
    "outputs": [
@@ -798,17 +798,18 @@
    "source": [
     "projection = s2_filtered.select('NDVI_median').projection().getInfo()\n",
     "\n",
-    "task = ee.batch.Export.image.toCloudStorage(\n",
+    "task = ee.batch.Export.image.toAsset(\n",
     "    image=s2_filtered, \n",
     "    description='NYS_S2_Indices',\n",
-    "    bucket=bucket_name,\n",
-    "    fileNamePrefix='Test_HUC_Indices_',\n",
+    "    assetId= \"projects/earthengineajs/assets/Test_HUC_Indices\",\n",
+    "    #bucket=bucket_name,\n",
+    "    #fileNamePrefix='Test_HUC_Indices_',\n",
     "    crs=\"EPSG:3857\",\n",
     "    #crsTransform=projection['transform'],\n",
     "    region=gfc.geometry(),\n",
     "    maxPixels=1e10,\n",
     "    scale=10,\n",
-    "    formatOptions={'cloudOptimized': False},\n",
+    "    #formatOptions={'cloudOptimized': False},\n",
     "    #fileFormat=\"GeoTIFF\"\n",
     ")\n",
     "task.start()"
@@ -816,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "id": "d374dc17-4316-4ed5-a72a-a816275e2342",
    "metadata": {},
    "outputs": [
@@ -860,15 +861,15 @@
        "{'state': 'READY',\n",
        " 'description': 'NYS_S2_Indices',\n",
        " 'priority': 100,\n",
-       " 'creation_timestamp_ms': 1752777636150,\n",
-       " 'update_timestamp_ms': 1752777636150,\n",
+       " 'creation_timestamp_ms': 1752787744048,\n",
+       " 'update_timestamp_ms': 1752787744048,\n",
        " 'start_timestamp_ms': 0,\n",
        " 'task_type': 'EXPORT_IMAGE',\n",
-       " 'id': 'YGXORXKBUWNFPF6D53LJOGEQ',\n",
-       " 'name': 'projects/484202851264/operations/YGXORXKBUWNFPF6D53LJOGEQ'}"
+       " 'id': 'SUPXL7PYIBCJ74MIGF5PE7HK',\n",
+       " 'name': 'projects/484202851264/operations/SUPXL7PYIBCJ74MIGF5PE7HK'}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
